# rust-cli

./: .gitignore  Cargo.toml
src/: main.rs
