[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.71"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1.28.1", features = ["macros"] }